--- a/yd1530_HW1.ipynb
+++ b/yd1530_HW1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,9 @@
     "from sklearn import cluster\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import math\n",
+    "folds = 10"
    ]
   },
   {
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -106,69 +108,65 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " Error for validation set and training set 01: \n",
+      "Error for validation set and training set 01: \n",
       "\n",
       "NB: Validation Error:  0.21052631578947367 ; Training Error:  0.24566473988439308\n",
       "LR: Validation Error:  0.23684210526315785 ; Training Error:  0.2225433526011561\n",
-      "NN: Validation Error:  0.25 ; Training Error:  0.14306358381502893\n",
+      "KNN: Validation Error:  0.25 ; Training Error:  0.14306358381502893\n",
       "\n",
-      " Error for validation set and training set 02: \n",
+      "Error for validation set and training set 02: \n",
       "\n",
       "NB: Validation Error:  0.2857142857142857 ; Training Error:  0.23733719247467433\n",
       "LR: Validation Error:  0.2597402597402597 ; Training Error:  0.22141823444283648\n",
-      "NN: Validation Error:  0.4155844155844156 ; Training Error:  0.14905933429811868\n",
+      "KNN: Validation Error:  0.4155844155844156 ; Training Error:  0.14905933429811868\n",
       "\n",
-      " Error for validation set and training set 03: \n",
+      "Error for validation set and training set 03: \n",
       "\n",
       "NB: Validation Error:  0.2987012987012987 ; Training Error:  0.23010130246020255\n",
       "LR: Validation Error:  0.2727272727272727 ; Training Error:  0.2098408104196816\n",
-      "NN: Validation Error:  0.2987012987012987 ; Training Error:  0.1432706222865412\n",
+      "KNN: Validation Error:  0.2987012987012987 ; Training Error:  0.1432706222865412\n",
       "\n",
-      " Error for validation set and training set 04: \n",
+      "Error for validation set and training set 04: \n",
       "\n",
       "NB: Validation Error:  0.16883116883116878 ; Training Error:  0.24312590448625182\n",
       "LR: Validation Error:  0.16883116883116878 ; Training Error:  0.23299565846599135\n",
-      "NN: Validation Error:  0.16883116883116878 ; Training Error:  0.15774240231548475\n",
+      "KNN: Validation Error:  0.16883116883116878 ; Training Error:  0.15774240231548475\n",
       "\n",
-      " Error for validation set and training set 05: \n",
+      "Error for validation set and training set 05: \n",
       "\n",
       "NB: Validation Error:  0.22077922077922074 ; Training Error:  0.2489146164978292\n",
       "LR: Validation Error:  0.18181818181818177 ; Training Error:  0.22720694645441386\n",
-      "NN: Validation Error:  0.24675324675324672 ; Training Error:  0.1432706222865412\n",
+      "KNN: Validation Error:  0.24675324675324672 ; Training Error:  0.1432706222865412\n",
       "\n",
-      " Error for validation set and training set 06: \n",
+      "Error for validation set and training set 06: \n",
       "\n",
       "NB: Validation Error:  0.2597402597402597 ; Training Error:  0.23444283646888564\n",
       "LR: Validation Error:  0.22077922077922074 ; Training Error:  0.22286541244573077\n",
-      "NN: Validation Error:  0.35064935064935066 ; Training Error:  0.14761215629522428\n",
+      "KNN: Validation Error:  0.35064935064935066 ; Training Error:  0.14761215629522428\n",
       "\n",
-      " Error for validation set and training set 07: \n",
+      "Error for validation set and training set 07: \n",
       "\n",
       "NB: Validation Error:  0.22077922077922074 ; Training Error:  0.24023154848046313\n",
       "LR: Validation Error:  0.23376623376623373 ; Training Error:  0.21997105643994208\n",
-      "NN: Validation Error:  0.2597402597402597 ; Training Error:  0.16063675832127355\n",
+      "KNN: Validation Error:  0.2597402597402597 ; Training Error:  0.16063675832127355\n",
       "\n",
-      " Error for validation set and training set 08: \n",
+      "Error for validation set and training set 08: \n",
       "\n",
       "NB: Validation Error:  0.2727272727272727 ; Training Error:  0.23299565846599135\n",
       "LR: Validation Error:  0.2597402597402597 ; Training Error:  0.2185238784370478\n",
-      "NN: Validation Error:  0.33766233766233766 ; Training Error:  0.14905933429811868\n",
+      "KNN: Validation Error:  0.33766233766233766 ; Training Error:  0.14905933429811868\n",
       "\n",
-      " Error for validation set and training set 09: \n",
+      "Error for validation set and training set 09: \n",
       "\n",
       "NB: Validation Error:  0.18181818181818177 ; Training Error:  0.24167872648335742\n",
       "LR: Validation Error:  0.19480519480519476 ; Training Error:  0.22286541244573077\n",
-      "NN: Validation Error:  0.3246753246753247 ; Training Error:  0.1432706222865412\n",
+      "KNN: Validation Error:  0.3246753246753247 ; Training Error:  0.1432706222865412\n",
       "\n",
-      " Error for validation set and training set 10: \n",
+      "Error for validation set and training set 10: \n",
       "\n",
       "NB: Validation Error:  0.3026315789473685 ; Training Error:  0.23121387283236994\n",
       "LR: Validation Error:  0.2894736842105263 ; Training Error:  0.21820809248554918\n",
-      "NN: Validation Error:  0.368421052631579 ; Training Error:  0.14306358381502893\n",
-      "\n",
-      "Final NB error:  0.24222488038277512\n",
-      "Final LR error:  0.27117224880382773\n",
-      "Final NN error:  0.279066985645933\n"
+      "KNN: Validation Error:  0.368421052631579 ; Training Error:  0.14306358381502893\n"
      ]
     }
    ],
@@ -187,9 +185,15 @@
     "\n",
     "#find the mean at the end\n",
     "mean_nb = 0\n",
+    "mean_lr = 0\n",
+    "mean_nn = 0\n",
     "\n",
     "# create a list to store the file numbers\n",
     "file_number = ['01','02','03','04','05','06','07','08','09','10']\n",
+    "validation_errors_nb = []\n",
+    "validation_errors_lr = []\n",
+    "validation_errors_nn = []\n",
+    "\n",
     "\n",
     "# loop here to calculate the error for each training set\n",
     "for i in file_number:\n",
@@ -229,21 +233,90 @@
     "    accuracy_nb = metrics.accuracy_score(VT_label, y_pred_nb)\n",
     "    accuracy_lr = metrics.accuracy_score(VT_label, y_pred_lr)\n",
     "    accuracy_nn = metrics.accuracy_score(VT_label, y_pred_nn)\n",
+    "    \n",
+    "    validation_errors_nb.append(1- accuracy_nb);\n",
+    "    validation_errors_lr.append(1- accuracy_lr);\n",
+    "    validation_errors_nn.append(1- accuracy_nn);\n",
+    "\n",
     "\n",
     "    mean_nb = mean_nb + (1 - accuracy_nb)\n",
-    "    mean_lr = mean_nb + (1 - accuracy_lr)\n",
-    "    mean_nn = mean_nb + (1 - accuracy_nn)\n",
+    "    mean_lr = mean_lr + (1 - accuracy_lr)\n",
+    "    mean_nn = mean_nn + (1 - accuracy_nn)\n",
     "\n",
     "    # Model Accuracy and Error\n",
-    "    print(\"\\n Error for validation set and training set \"+ i+ \": \\n\")\n",
+    "    print(\"\\nError for validation set and training set \"+ i+ \": \\n\")\n",
     "    print(\"NB: Validation Error: \"  , 1 - accuracy_nb, \"; Training Error: \", 1 - accuracy_nb_train)\n",
     "    print(\"LR: Validation Error: \"  , 1 - accuracy_lr, \"; Training Error: \", 1 - accuracy_lr_train)\n",
-    "    print(\"NN: Validation Error: \"  , 1 - accuracy_nn, \"; Training Error: \", 1 - accuracy_nn_train)\n",
+    "    print(\"KNN: Validation Error: \"  , 1 - accuracy_nn, \"; Training Error: \", 1 - accuracy_nn_train)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean NB validation error:  0.24222488038277512\n",
+      "Mean LR validation error:  0.23185235816814762\n",
+      "Mean NN validation error:  0.30210184552289815\n",
+      "\n",
+      "Standard deviation for NB classifier:  0.045746372142671576\n",
+      "Standard deviation for LR classifier:  0.03813817280954714\n",
+      "Standard deviation for NN classifier:  0.06837595511784197\n",
+      "\n",
+      "Standard error for NB classifier:  2.9188499477356338\n",
+      "Standard error for LR classifier:  2.6410809233524737\n",
+      "Standard error for NN classifier:  4.722045704554598\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now calculate the standard error and confidence\n",
     "\n",
-    "# calculating average error from 10 sets\n",
-    "print(\"\\nFinal NB error: \",mean_nb/10)\n",
-    "print(\"Final LR error: \",mean_lr/10)\n",
-    "print(\"Final NN error: \",mean_nn/10)\n",
+    "# calculating average of validation error from 10 sets\n",
+    "mean_validation_error_nb = mean_nb/folds;\n",
+    "mean_validation_error_lr = mean_lr/folds;\n",
+    "mean_validation_error_nn = mean_nn/folds;\n",
+    "\n",
+    "print(\"Mean NB validation error: \", mean_validation_error_nb)\n",
+    "print(\"Mean LR validation error: \",mean_validation_error_lr)\n",
+    "print(\"Mean NN validation error: \",mean_validation_error_nn)\n",
+    "\n",
+    "nb_sum = 0\n",
+    "lr_sum = 0\n",
+    "nn_sum = 0\n",
+    "\n",
+    "# now calculation the standard deviation\n",
+    "for i in range(folds):\n",
+    "\n",
+    "    nb_sum = nb_sum + math.pow((validation_errors_nb[i] - mean_validation_error_nb), 2)\n",
+    "    lr_sum = lr_sum + math.pow((validation_errors_lr[i] - mean_validation_error_lr), 2)\n",
+    "    nn_sum = nn_sum + math.pow((validation_errors_nn[i] - mean_validation_error_nn), 2)\n",
+    "\n",
+    "standard_deviation_nb = math.sqrt(nb_sum/folds)\n",
+    "standard_deviation_lr = math.sqrt(lr_sum/folds)\n",
+    "standard_deviation_nn = math.sqrt(nn_sum/folds)\n",
+    "\n",
+    "print(\"\\nStandard deviation for NB classifier: \", standard_deviation_nb)\n",
+    "print(\"Standard deviation for LR classifier: \", standard_deviation_lr)\n",
+    "print(\"Standard deviation for NN classifier: \", standard_deviation_nn)\n",
+    "\n",
+    "    \n",
+    "# calculating standard error , substituting p= 0.2 here\n",
+    "std_error_nb = (math.sqrt(folds))*(mean_validation_error_nb - 0.2)/standard_deviation_nb\n",
+    "std_error_lr = (math.sqrt(folds))*(mean_validation_error_lr - 0.2)/standard_deviation_lr\n",
+    "std_error_nn = (math.sqrt(folds))*(mean_validation_error_nn - 0.2)/standard_deviation_nn\n",
+    "\n",
+    "print(\"\\nStandard error for NB classifier: \", std_error_nb)\n",
+    "print(\"Standard error for LR classifier: \", std_error_lr)\n",
+    "print(\"Standard error for NN classifier: \", std_error_nn)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
