--- a/hwk1final.ipynb
+++ b/hwk1final.ipynb
@@ -264,14 +264,7 @@
      ]
     }
    ],
-   "source": [
-    "m=np.mean(naive_mean)\n",
-    "S=np.std(naive_mean)\n",
-    "k=10\n",
-    "#T test\n",
-    "Value=((k**0.5)*(m-0.2))/S\n",
-    "print(Value)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -287,78 +280,15 @@
     }
    ],
    "source": [
-    "alpha=0.1\n",
-    "df1=2\n",
-    "df2=27\n",
-    "df_total=29\n",
-    "number_of_folds=10\n",
-    "\n",
-    "f_crit=2.51061\n",
-    "\n",
-    "\n",
-    "total_Mean=(np.mean(log_mean)+np.mean(naive_mean)+np.mean(knn_mean))/3\n",
-    "print(total_Mean)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SST 0.0028759435483632348\n",
-      "SSW 0.0822252202774382\n",
-      "F value 4.721816222796662\n"
-     ]
-    }
-   ],
-   "source": [
-    "logreg_calc=[]\n",
-    "logreg_ss=[]\n",
-    "calc=(np.mean(log_mean)-total_Mean)**2\n",
-    "for i in range(len(log_mean)):\n",
-    "    #calc=(logistic_mean-total_Mean)**2\n",
-    "    ss_within=(log_mean[i]-np.mean(log_mean))**2\n",
-    "    #logreg_calc.append(calc)\n",
-    "    logreg_ss.append(ss_within)\n",
-    "sst_logreg=calc\n",
-    "logreg_ssw=sum(logreg_ss)\n",
-    "\n",
-    "naive_calc=[]\n",
-    "naive_ss=[]\n",
-    "calc=(np.mean(naive_mean)-total_Mean)**2\n",
-    "for i in range(len(naive_mean)):\n",
-    "   \n",
-    "    ss_within=(naive_mean[i]-np.mean(naive_mean))**2\n",
-    "    \n",
-    "    naive_ss.append(ss_within)\n",
-    "sst_naive=calc\n",
-    "naive_ssw=sum(naive_ss)\n",
-    "\n",
-    "knn_calc=[]\n",
-    "knn_ss=[]\n",
-    "calc=(np.mean(knn_mean)-total_Mean)**2\n",
-    "for i in range(len(knn_mean)):\n",
-    "   # calc=(knn_mean-total_Mean)**2\n",
-    "    ss_within=(knn_mean[i]-np.mean(knn_mean))**2\n",
-    "    #knn_calc.append(calc)\n",
-    "    knn_ss.append(ss_within)\n",
-    "sst_knn=calc\n",
-    "knn_ssw=sum(knn_ss)\n",
-    "total_sst=sst_logreg+sst_naive+sst_knn\n",
-    "total_ssw=logreg_ssw+naive_ssw+knn_ssw\n",
-    "print('SST',total_sst)\n",
-    "print('SSW',total_ssw)\n",
-    "\n",
-    "ssb_total=(np.mean(log_mean)-total_Mean)**2+(np.mean(naive_mean)-total_Mean)**2+(np.mean(knn_mean)-total_Mean)**2\n",
-    "ms_between=k*ssb_total/df1\n",
-    "ms_within=total_ssw/df2\n",
-    "f_value=ms_between/ms_within\n",
-    "print('F value',f_value)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -366,6 +296,28 @@
    "source": [
     "4.is the error of naive bayes <0.2 with confidence 0.9\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.9188499477356338\n"
+     ]
+    }
+   ],
+   "source": [
+    "m=np.mean(naive_mean)\n",
+    "S=np.std(naive_mean)\n",
+    "k=10\n",
+    "#T test\n",
+    "V=((k**0.5)*(m-0.2))/S\n",
+    "print(V)"
    ]
   },
   {
@@ -387,6 +339,85 @@
    "metadata": {},
    "source": [
     "6.do the three classifiers have different errors?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2587263613579403\n",
+      "SST 0.0028759435483632348\n",
+      "SSW 0.0822252202774382\n",
+      "F value 4.721816222796662\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1=2\n",
+    "df2=27\n",
+    "df_total=29\n",
+    "number_of_folds=10\n",
+    "\n",
+    "f_crit=2.51061\n",
+    "\n",
+    "\n",
+    "total_Mean=(np.mean(log_mean)+np.mean(naive_mean)+np.mean(knn_mean))/3\n",
+    "print(total_Mean)\n",
+    "\n",
+    "log_calculate=[]\n",
+    "log_ss=[]\n",
+    "calculate=(np.mean(log_mean)-total_Mean)**2\n",
+    "for i in range(len(log_mean)):\n",
+    "    #calc=(logistic_mean-total_Mean)**2\n",
+    "    ss_within=(log_mean[i]-np.mean(log_mean))**2\n",
+    "    #logreg_calc.append(calc)\n",
+    "    log_ss.append(ss_within)\n",
+    "sst_log=calculate\n",
+    "log_ssw=sum(logreg_ss)\n",
+    "\n",
+    "naive_calculate=[]\n",
+    "naive_ss=[]\n",
+    "calculate=(np.mean(naive_mean)-total_Mean)**2\n",
+    "for i in range(len(naive_mean)):\n",
+    "   \n",
+    "    ss_within=(naive_mean[i]-np.mean(naive_mean))**2\n",
+    "    \n",
+    "    naive_ss.append(ss_within)\n",
+    "sst_naive=calculate\n",
+    "naive_ssw=sum(naive_ss)\n",
+    "\n",
+    "knn_calculate=[]\n",
+    "knn_ss=[]\n",
+    "calculate=(np.mean(knn_mean)-total_Mean)**2\n",
+    "for i in range(len(knn_mean)):\n",
+    "   # calc=(knn_mean-total_Mean)**2\n",
+    "    ss_within=(knn_mean[i]-np.mean(knn_mean))**2\n",
+    "    #knn_calc.append(calc)\n",
+    "    knn_ss.append(ss_within)\n",
+    "sst_knn=calculate\n",
+    "knn_ssw=sum(knn_ss)\n",
+    "total_sst=sst_log+sst_naive+sst_knn\n",
+    "total_ssw=log_ssw+naive_ssw+knn_ssw\n",
+    "print('SST',total_sst)\n",
+    "print('SSW',total_ssw)\n",
+    "\n",
+    "ssb_total=(np.mean(log_mean)-total_Mean)**2+(np.mean(naive_mean)-total_Mean)**2+(np.mean(knn_mean)-total_Mean)**2\n",
+    "ms_between=k*ssb_total/df1\n",
+    "ms_within=total_ssw/df2\n",
+    "f_value=ms_between/ms_within\n",
+    "print('F value',f_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The f-critical value is calculated from f distributed table which is f_crit=2.51061. Using Anova we calculated the variation between the groups and variation within groups .From that we calculated F value.By comparing F value and f-crictical.we can say that three classifier have different error."
    ]
   },
   {
