added 5th question

--- a/yd1530_HW1.ipynb
+++ b/yd1530_HW1.ipynb
@@ -344,10 +344,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean diffrence of KNN and NB classifier errors :  0.05987696514012305\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for knn and NB\n",
+    "diff = 0\n",
+    "for i in range(folds):\n",
+    "    diff = diff + abs(validation_errors_nn[i]-validation_errors_nb[i])\n",
+    "mean_diff = diff/folds;\n",
+    "print(\"mean diffrence of KNN and NB classifier errors : \",mean_diff)\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "From above calculations and using null hypothesis, we can say that the KNN and NB classifier are quite\n",
+    "similar. However, they are not exactly same."
+   ]
   },
   {
    "cell_type": "markdown",
