--- a/hwk1final.ipynb
+++ b/hwk1final.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,9 @@
     "from sklearn import cluster\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import math\n",
+    "folds=10"
    ]
   },
   {
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +90,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -243,54 +245,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.9188499477356338\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.2587263613579403\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -300,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -324,15 +278,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "ANS) No,because critical error is less than(<) value error. we calculated the T Test using the formula value=(sqrt(k)*(m-t)/standard deviation) and we got the value 2.9188499477356338 the critical error calculated form the t test table 1.383 .(t0.1,9) with one-tail"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5.have  naive bayes and knn the same error?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean diffrence of KNN and NB classifier errors :  0.05987696514012305\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for knn and NB\n",
+    "diff = 0\n",
+    "for i in range(folds):\n",
+    "    diff = diff + abs(knn_mean[i]-naive_mean[i])\n",
+    "mean_diff = diff/folds;\n",
+    "print(\"mean diffrence of KNN and NB classifier errors : \",mean_diff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANS) From above calculations and using null hypothesis, we can say that the KNN and NB classifier are quite\n",
+    "similar. However, they are not exactly same."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -343,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The f-critical value is calculated from f distributed table which is f_crit=2.51061. Using Anova we calculated the variation between the groups and variation within groups .From that we calculated F value.By comparing F value and f-crictical.we can say that three classifier have different error."
+    "ANS) The f-critical value is calculated from f distributed table which is f_crit=2.51061. Using Anova we calculated the variation between the groups and variation within groups .From that we calculated F value.By comparing F value and f-crictical.we can say that three classifier have different error."
    ]
   },
   {
