--- a/yd1530_HW1.ipynb
+++ b/yd1530_HW1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -330,10 +330,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.9188499477356338\n"
+     ]
+    }
+   ],
+   "source": [
+    "m=np.mean(validation_errors_nb)\n",
+    "S=np.std(validation_errors_nb)\n",
+    "k=10\n",
+    "#T test\n",
+    "V=((k**0.5)*(m-0.2))/S\n",
+    "print(V)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANS) No,because critical error is less than(<) value error. we calculated the T Test using the formula value=(sqrt(k)*(m-t)/standard deviation) and we got the value 2.9188499477356338 the critical error calculated form the t test table 1.383 .(t0.1,9) with one-tail"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -344,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -368,10 +390,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "From above calculations and using null hypothesis, we can say that the KNN and NB classifier are quite\n",
     "similar. However, they are not exactly same."
@@ -386,10 +406,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2587263613579403\n",
+      "SST 0.0028759435483632348\n",
+      "SSW 0.0822252202774382\n",
+      "F value 4.721816222796662\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1=2\n",
+    "df2=27\n",
+    "df_total=29\n",
+    "number_of_folds=10\n",
+    "\n",
+    "f_crit=2.51061\n",
+    "\n",
+    "\n",
+    "total_Mean=(np.mean(validation_errors_lr)+np.mean(validation_errors_nb)+np.mean(validation_errors_nn))/3\n",
+    "print(total_Mean)\n",
+    "\n",
+    "log_calculate=[]\n",
+    "log_ss=[]\n",
+    "calculate=(np.mean(validation_errors_lr)-total_Mean)**2\n",
+    "for i in range(len(validation_errors_lr)):\n",
+    "    #calc=(logistic_mean-total_Mean)**2\n",
+    "    ss_within=(validation_errors_lr[i]-np.mean(validation_errors_lr))**2\n",
+    "    #logreg_calc.append(calc)\n",
+    "    log_ss.append(ss_within)\n",
+    "sst_log=calculate\n",
+    "log_ssw=sum(log_ss)\n",
+    "\n",
+    "naive_calculate=[]\n",
+    "naive_ss=[]\n",
+    "calculate=(np.mean(validation_errors_nb)-total_Mean)**2\n",
+    "for i in range(len(validation_errors_nb)):\n",
+    "   \n",
+    "    ss_within=(validation_errors_nb[i]-np.mean(validation_errors_nb))**2\n",
+    "    \n",
+    "    naive_ss.append(ss_within)\n",
+    "sst_naive=calculate\n",
+    "naive_ssw=sum(naive_ss)\n",
+    "\n",
+    "knn_calculate=[]\n",
+    "knn_ss=[]\n",
+    "calculate=(np.mean(validation_errors_nn)-total_Mean)**2\n",
+    "for i in range(len(validation_errors_nn)):\n",
+    "   # calc=(knn_mean-total_Mean)**2\n",
+    "    ss_within=(validation_errors_nn[i]-np.mean(validation_errors_nn))**2\n",
+    "    #knn_calc.append(calc)\n",
+    "    knn_ss.append(ss_within)\n",
+    "sst_knn=calculate\n",
+    "knn_ssw=sum(knn_ss)\n",
+    "total_sst=sst_log+sst_naive+sst_knn\n",
+    "total_ssw=log_ssw+naive_ssw+knn_ssw\n",
+    "print('SST',total_sst)\n",
+    "print('SSW',total_ssw)\n",
+    "\n",
+    "ssb_total=(np.mean(validation_errors_lr)-total_Mean)**2+(np.mean(validation_errors_nb)-total_Mean)**2+(np.mean(validation_errors_nn)-total_Mean)**2\n",
+    "ms_between=k*ssb_total/df1\n",
+    "ms_within=total_ssw/df2\n",
+    "f_value=ms_between/ms_within\n",
+    "print('F value',f_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANS) The f-critical value is calculated from f distributed table which is f_crit=2.51061. Using Anova we calculated the variation between the groups and variation within groups .From that we calculated F value.By comparing F value and f-crictical.we can say that three classifier have different error."
+   ]
   }
  ],
  "metadata": {
