found confusion matrix for train and test error for question2.

--- a/yd1530_HW2.ipynb
+++ b/yd1530_HW2.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "1ccbc17d",
+   "execution_count": 419,
+   "id": "d8d99278",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 420,
    "id": "302e2083",
    "metadata": {},
    "outputs": [
@@ -375,21 +375,21 @@
        "[200 rows x 65 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 420,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "train_data = read_csv('/media/anuja/study/Anuja/MS/CS_697A_ML/hw2/optdigits_69_N200.tra', sep=\",\")\n",
+    "train_data = pd.read_csv('/media/anuja/study/Anuja/MS/CS_697A_ML/hw2/optdigits_69_N200.tra', sep=\",\")\n",
     "train_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "31e77b56",
+   "execution_count": 421,
+   "id": "c1a57638",
    "metadata": {},
    "outputs": [
     {
@@ -437,8 +437,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "fc9d37d7",
+   "execution_count": 422,
+   "id": "6ec0bf25",
    "metadata": {},
    "outputs": [
     {
@@ -462,8 +462,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "8f33834c",
+   "execution_count": 423,
+   "id": "0f7d31fe",
    "metadata": {},
    "outputs": [
     {
@@ -487,8 +487,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "id": "701f892e",
+   "execution_count": 424,
+   "id": "adad1c70",
    "metadata": {},
    "outputs": [
     {
@@ -546,8 +546,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "34dba7d3",
+   "execution_count": 425,
+   "id": "20246485",
    "metadata": {
     "scrolled": true
    },
@@ -604,8 +604,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "id": "4e06fae5",
+   "execution_count": 426,
+   "id": "413c29b5",
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
        "[360 rows x 65 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 426,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,14 +960,14 @@
    "source": [
     "# now we have to repeat all procedures mentioned above for test data\n",
     "\n",
-    "test_data = read_csv('/media/anuja/study/Anuja/MS/CS_697A_ML/hw2/optdigits_69.tes', sep=\",\")\n",
+    "test_data = pd.read_csv('/media/anuja/study/Anuja/MS/CS_697A_ML/hw2/optdigits_69.tes', sep=\",\")\n",
     "test_data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "51a4ab74",
+   "execution_count": 427,
+   "id": "02ce7814",
    "metadata": {},
    "outputs": [
     {
@@ -1016,8 +1016,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "id": "af7133c2",
+   "execution_count": 428,
+   "id": "e2e76082",
    "metadata": {},
    "outputs": [
     {
@@ -1042,8 +1042,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "id": "1f193cca",
+   "execution_count": 429,
+   "id": "70715645",
    "metadata": {},
    "outputs": [
     {
@@ -1067,8 +1067,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "106a2ca0",
+   "execution_count": 430,
+   "id": "b502886f",
    "metadata": {},
    "outputs": [
     {
@@ -1098,8 +1098,8 @@
     "    test_error_of_feature = 0\n",
     "    for irow in range (test_rows):\n",
     "        if (~(train_std_class6 == 0.0) & ~(train_std_class9 == 0.0)):\n",
-    "            test_g_class6 = -((1/2)* math.log(2*math.pi)) - math.log(train_std_class6) - ((test_array[irow,icol] - train_mean_class6)** 2)/(2*(train_std_class6**2)) + math.log(test_prior_class6)\n",
-    "            test_g_class9 = -((1/2)* math.log(2*math.pi)) - math.log(train_std_class9) - ((test_array[irow,icol] - train_mean_class9)** 2)/(2*(train_std_class9**2)) + math.log(test_prior_class6)\n",
+    "            test_g_class6 = -((1/2)* math.log(2*math.pi)) - math.log(train_std_class6) - ((test_array[irow,icol] - train_mean_class6)**2)/(2*(train_std_class6**2)) + math.log(test_prior_class6)\n",
+    "            test_g_class9 = -((1/2)* math.log(2*math.pi)) - math.log(train_std_class9) - ((test_array[irow,icol] - train_mean_class9)**2)/(2*(train_std_class9**2)) + math.log(test_prior_class6)\n",
     "            if (test_g_class6 > test_g_class9):\n",
     "                if ~(test_array[irow, 64] == 6):\n",
     "                    test_error_of_feature = test_error_of_feature + 1\n",
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1137eb",
+   "id": "99ba3d3a",
    "metadata": {},
    "source": [
     "Answer: For the given testing data set, we get the error for given features as shown above. The top 10 features who give the best performance among all are as :\n",
@@ -1137,11 +1137,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 431,
    "id": "288567fd",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(200, 46)\n",
+      "(360, 46)\n",
+      "(200, 45)\n",
+      "(360, 45)\n",
+      "(100, 45)\n",
+      "(100, 45)\n",
+      "(45, 1)\n",
+      "(45, 1)\n",
+      "(45, 1)\n",
+      "(45, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# first will create train and test dataset here. we will remove those features which has variance zero.\n",
+    "# create new data array for confusion matrix and accuracy calculation\n",
+    "\n",
+    "columns = 64\n",
+    "\n",
+    "train_error = []\n",
+    "test_error = []\n",
+    "\n",
+    "train_modified = pd.DataFrame(train_array)   \n",
+    "test_modified = pd.DataFrame(test_array)\n",
+    "train_modified_class6 = pd.DataFrame(train_class6)\n",
+    "train_modified_class9 = pd.DataFrame(train_class9)\n",
+    "test_modified = pd.DataFrame(test_array)\n",
+    "train_modified_std_class6 = pd.DataFrame(train_df.Train_Std_Deviation_class6)\n",
+    "train_modified_std_class9 = pd.DataFrame(train_df.Train_Std_Deviation_class9)\n",
+    "train_modified_mean_class6 = pd.DataFrame(train_df.Train_Mean_class6)\n",
+    "train_modified_mean_class9 = pd.DataFrame(train_df.Train_Mean_class9)\n",
+    "                \n",
+    "for icol in range(columns):\n",
+    "    if((train_df.Train_Std_Deviation_class6[icol] == 0) | (train_df.Train_Std_Deviation_class9[icol] == 0)):\n",
+    "        train_modified = train_modified.drop(icol, axis =1)\n",
+    "        test_modified = test_modified.drop(icol, axis =1)\n",
+    "        train_modified_class6 = train_modified_class6.drop(icol, axis =1)\n",
+    "        train_modified_class9 = train_modified_class9.drop(icol, axis =1)\n",
+    "        train_modified_std_class6 = train_modified_std_class6.drop(icol, axis = 0)\n",
+    "        train_modified_std_class9 = train_modified_std_class9.drop(icol, axis = 0)\n",
+    "        train_modified_mean_class6 = train_modified_mean_class6.drop(icol, axis = 0)\n",
+    "        train_modified_mean_class9 = train_modified_mean_class9.drop(icol, axis = 0)\n",
+    "\n",
+    "# instead of deleting those columns it is creating columns with all values as zero, so now remove those columns\n",
+    "train_modified = train_modified.loc[:, (train_modified != 0).any(axis=0)]\n",
+    "test_modified = test_modified.loc[:, (test_modified != 0).any(axis=0)]\n",
+    "train_modified_std_class6  = train_modified_std_class6.loc[:, (train_modified_std_class6 != 0).any(axis=0)]\n",
+    "train_modified_std_class9  = train_modified_std_class9.loc[:, (train_modified_std_class9 != 0).any(axis=0)]\n",
+    "train_modified_mean_class6  = train_modified_mean_class6.loc[:, (train_modified_mean_class6 != 0).any(axis=0)]\n",
+    "train_modified_mean_class9  = train_modified_mean_class9.loc[:, (train_modified_mean_class9 != 0).any(axis=0)]\n",
+    "\n",
+    "print(train_modified.shape)\n",
+    "print(test_modified.shape)\n",
+    "\n",
+    "# discarding last column as it is gives classes\n",
+    "train_modified.drop(train_modified.columns[len(train_modified.columns)-1], axis=1, inplace=True)\n",
+    "test_modified.drop(test_modified.columns[len(test_modified.columns)-1], axis=1, inplace=True)\n",
+    "\n",
+    "train_modified_class6.drop(train_modified_class6.columns[len(train_modified_class6.columns)-1], axis=1, inplace=True)\n",
+    "train_modified_class9.drop(train_modified_class9.columns[len(train_modified_class9.columns)-1], axis=1, inplace=True)\n",
+    "\n",
+    "print(train_modified.shape)\n",
+    "print(test_modified.shape)\n",
+    "\n",
+    "print(train_modified_class6.shape)\n",
+    "print(train_modified_class9.shape)\n",
+    "\n",
+    "print(train_modified_mean_class6.shape)\n",
+    "print(train_modified_mean_class9.shape)\n",
+    "\n",
+    "print(train_modified_std_class6.shape)\n",
+    "print(train_modified_std_class9.shape)\n",
+    "\n",
+    "# converting dataframe into numpy array\n",
+    "train_modified = np.array(train_modified)\n",
+    "test_modified = np.array(test_modified)\n",
+    "\n",
+    "\n",
+    "# with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "id": "a553c3a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training TP : 100\n",
+      "Training TN : 100\n",
+      "Training FP : 0\n",
+      "Training FN : 0\n",
+      "\n",
+      "Testing TP : 174\n",
+      "Testing TN : 180\n",
+      "Testing FP : 0\n",
+      "Testing FN : 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the transpose of our modified training classes and finding covariance\n",
+    "p = 0.5\n",
+    "cov_class6 = np.cov(train_modified_class6.T)\n",
+    "cov_class9 = np.cov(train_modified_class9.T)\n",
+    "\n",
+    "# taking inverse of of matrices here\n",
+    "# clas6_inv = np.linalg.inv(cov_class6) // this syntax was giving singular matrix error\n",
+    "# //because somewhere we are getting determinant zero\n",
+    "clas6_inv = np.linalg.pinv(cov_class6)\n",
+    "clas9_inv = np.linalg.pinv(cov_class9)\n",
+    "\n",
+    "# calculating terms for quadratic descriminant using different covariance matrices\n",
+    "\n",
+    "W_class6 = (-1/2) * clas6_inv\n",
+    "W_class9 = (-1/2) * clas9_inv\n",
+    "\n",
+    "w_class6 = clas6_inv.dot(train_modified_mean_class6.iloc[:, 0]) \n",
+    "w_class9 = clas9_inv.dot(train_modified_mean_class9.iloc[:, 0]) \n",
+    "\n",
+    "first_term6 = (-1/2)*(np.transpose(train_modified_mean_class6.iloc[:, 0]).dot(clas6_inv.dot(train_modified_mean_class6.iloc[:, 0])))\n",
+    "second_term6 = (-1/2)*math.log(np.linalg.det(cov_class6))\n",
+    "\n",
+    "first_term9 = (-1/2)*(np.transpose(train_modified_mean_class9.iloc[:, 0]).dot(clas9_inv.dot(train_modified_mean_class9.iloc[:, 0])))\n",
+    "second_term9 = (-1/2)*math.log(np.linalg.det(cov_class9))\n",
+    "\n",
+    "w0_class6 = first_term6 + second_term6 + math.log(p)\n",
+    "w0_class9 = first_term9 + second_term9 + math.log(p)\n",
+    "\n",
+    "train_tp = 0\n",
+    "train_tn = 0\n",
+    "train_fp = 0\n",
+    "train_fn = 0\n",
+    "\n",
+    "test_tp = 0\n",
+    "test_tn = 0\n",
+    "test_fp = 0\n",
+    "test_fn = 0\n",
+    "\n",
+    "for i,x in enumerate(train_modified):\n",
+    "    \n",
+    "#   descriminant calculation\n",
+    "    g_of_class6 = (((x)).dot(W_class6)).dot(x) + (w_class6.T).dot(x) + w0_class6\n",
+    "    g_of_class9 = (((x)).dot(W_class9)).dot(x) + (w_class9.T).dot(x) + w0_class9\n",
+    "    \n",
+    "    if (g_of_class9 > g_of_class6):\n",
+    "        predicted_train = 9\n",
+    "    else:\n",
+    "        predicted_train = 6\n",
+    "\n",
+    "#   now finding confusion matrix\n",
+    "    if (predicted_train == train_array[i,columns]):\n",
+    "        if predicted_train == 6:\n",
+    "            train_tp += 1\n",
+    "        else:\n",
+    "            train_tn += 1\n",
+    "    else:\n",
+    "        if (train_array[i,columns] == 6 and predicted_train == 9):\n",
+    "            train_fn += 1\n",
+    "        else:\n",
+    "            train_fp += 1\n",
+    "    \n",
+    "print(\"Training TP : \" + str(train_tp))    \n",
+    "print(\"Training TN : \" + str(train_tn)) \n",
+    "print(\"Training FP : \" + str(train_fp))    \n",
+    "print(\"Training FN : \" + str(train_fn))  \n",
+    "    \n",
+    "for i,x in enumerate(test_modified):\n",
+    "    \n",
+    "#   descriminant calculation\n",
+    "    g_of_class6 = (((x)).dot(W_class6)).dot(x) + (w_class6.T).dot(x) + w0_class6\n",
+    "    g_of_class9 = (((x)).dot(W_class9)).dot(x) + (w_class9.T).dot(x) + w0_class9\n",
+    "\n",
+    "    if (g_of_class9 > g_of_class6):\n",
+    "        predicted_test = 9\n",
+    "    else:\n",
+    "        predicted_test = 6\n",
+    "\n",
+    "#   now finding confusion matrix\n",
+    "    if (predicted_test == test_array[i,columns]):\n",
+    "        if predicted_test == 6:\n",
+    "            test_tp += 1\n",
+    "        else:\n",
+    "            test_tn += 1\n",
+    "    else:\n",
+    "        if (test_array[i,columns] == 6 and predicted_test == 9):\n",
+    "            test_fn += 1\n",
+    "        else:\n",
+    "            test_fp += 1\n",
+    "    \n",
+    "print(\"\\nTesting TP : \" + str(test_tp))    \n",
+    "print(\"Testing TN : \" + str(test_tn)) \n",
+    "print(\"Testing FP : \" + str(test_fp))    \n",
+    "print(\"Testing FN : \" + str(test_fn))  \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 433,
+   "id": "3561aed5",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# now we have to find train and test errors \n"
+   ]
   },
   {
    "cell_type": "markdown",
