finished question 2. Added error calculation part

--- a/yd1530_HW2.ipynb
+++ b/yd1530_HW2.ipynb
@@ -1228,8 +1228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
-   "id": "a553c3a5",
+   "execution_count": 437,
+   "id": "c849907a",
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,10 @@
       "Testing TP : 174\n",
       "Testing TN : 180\n",
       "Testing FP : 0\n",
-      "Testing FN : 6\n"
+      "Testing FN : 6\n",
+      "\n",
+      "Training Error using confusion matrix:  0.0\n",
+      "Testing Error using confusion matrix:  0.016666666666666666\n"
      ]
     }
    ],
@@ -1343,6 +1346,13 @@
     "print(\"Testing FP : \" + str(test_fp))    \n",
     "print(\"Testing FN : \" + str(test_fn))  \n",
     "\n",
+    "# now we have to find train and test errors\n",
+    "\n",
+    "training_error = (train_fp + train_fn)/(train_fp + train_fn + train_tp + train_tn)\n",
+    "testing_error = (test_fp + test_fn)/(test_fp + test_fn + test_tp + test_tn)\n",
+    "\n",
+    "print(\"\\nTraining Error using confusion matrix: \", training_error)\n",
+    "print(\"Testing Error using confusion matrix: \", testing_error)\n",
     "\n"
    ]
   },
@@ -1352,9 +1362,7 @@
    "id": "3561aed5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# now we have to find train and test errors \n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
