updated question 4 with some minor changes

--- a/yd1530_HW2.ipynb
+++ b/yd1530_HW2.ipynb
@@ -1656,10 +1656,9 @@
     "    df_train_modified_class9[col] = train_class9[:,col-1]\n",
     "    list_train_mean_class6.append(train_mean_class6_data[col-1])\n",
     "    list_train_mean_class9.append(train_mean_class9_data[col-1])\n",
-    "\n",
+    "    \n",
+    "# converted dataframe to array\n",
     "test_modified = np.array(df_modified_test)\n",
-    "print(list_train_mean_class6)\n",
-    "print(list_train_mean_class9)\n",
     "\n",
     "# get the transpose of our modified training classes and finding covariance\n",
     "p = 0.5\n",
