updated 4th question with some correction.

--- a/yd1530_HW2.ipynb
+++ b/yd1530_HW2.ipynb
@@ -1516,104 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
-   "id": "a090ac79",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>1</th>\n",
-       "      <th>Course</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Computer science</td>\n",
-       "      <td>annu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Computer science</td>\n",
-       "      <td>annu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Computer science</td>\n",
-       "      <td>annu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Computer science</td>\n",
-       "      <td>annu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Computer science</td>\n",
-       "      <td>annu</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   1            Course  name\n",
-       "0  1  Computer science  annu\n",
-       "1  2  Computer science  annu\n",
-       "2  3  Computer science  annu\n",
-       "3  4  Computer science  annu\n",
-       "4  5  Computer science  annu"
-      ]
-     },
-     "execution_count": 505,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# initialise data of lists.\n",
-    "data = [1,2,3,4,5]\n",
-    " \n",
-    "# Create DataFrame\n",
-    "df = pd.DataFrame()\n",
-    "df=pd.DataFrame(columns=[1])\n",
-    "df[1] = [1,2,3,4,5]\n",
-    "# df = df.append([2,3,4,5,5])\n",
-    "df['Course'] = 'Computer science'\n",
-    "df['name'] = 'annu'\n",
-    "  \n",
-    "# Print the output.\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 537,
    "id": "5d863358",
    "metadata": {},
    "outputs": [
@@ -1621,26 +1524,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.79, 0.82, 2.9, 0.9, 0.02, 3.13, 14.75, 15.0, 10.83, 12.86]\n",
-      "[10.58, 8.44, 12.06, 14.76, 4.05, 0.36, 3.58, 0.43, 0.79, 5.5]\n",
       "\n",
-      "Testing TP : 178\n",
-      "Testing TN : 177\n",
-      "Testing FP : 3\n",
-      "Testing FN : 2\n",
-      "Testing Error using confusion matrix:  0.013888888888888888\n"
+      "Testing TP : 100\n",
+      "Testing TN : 100\n",
+      "Testing FP : 0\n",
+      "Testing FN : 0\n",
+      "\n",
+      "Training Error using confusion matrix:  0.0\n"
      ]
     }
    ],
    "source": [
-    "# use of first 10 features(best performers from the first question ) here from original test data set\n",
-    "# 10 features listed are: feature43, feature14, feature30, feature35, feature44, feature31, feature21,\n",
-    "# feature29, feature52, feature34.\n",
+    "# use of first 10 features(best train performers from the first question ) here from original train data set\n",
+    "# 10 features listed are: feature43, feature30, feature44, feature31, feature35, feature14, \n",
+    "# feature29, feature55, feature21, feature52\n",
     "\n",
-    "\n",
-    "features_col = [14, 21, 29, 30, 31, 34, 35, 43, 44, 52]\n",
+    "features_col = [14, 21, 29, 30, 31, 35, 43, 44, 52, 55]\n",
     "# Create DataFrame\n",
-    "df_modified_test = pd.DataFrame()\n",
+    "df_modified_train = pd.DataFrame()\n",
     "df_train_modified_class6 = pd.DataFrame()\n",
     "df_train_modified_class9 = pd.DataFrame()\n",
     "list_train_mean_class6 = []\n",
@@ -1651,14 +1552,14 @@
     "# creating data set\n",
     "\n",
     "for col in features_col:\n",
-    "    df_modified_test[col] = test_array[:,col-1]\n",
+    "    df_modified_train[col] = train_array[:,col-1]\n",
     "    df_train_modified_class6[col] = train_class6[:,col-1]\n",
     "    df_train_modified_class9[col] = train_class9[:,col-1]\n",
     "    list_train_mean_class6.append(train_mean_class6_data[col-1])\n",
     "    list_train_mean_class9.append(train_mean_class9_data[col-1])\n",
     "    \n",
     "# converted dataframe to array\n",
-    "test_modified = np.array(df_modified_test)\n",
+    "train_modified = np.array(df_modified_train)\n",
     "\n",
     "# get the transpose of our modified training classes and finding covariance\n",
     "p = 0.5\n",
@@ -1690,12 +1591,12 @@
     "w0_class6 = first_term6 + second_term6 + math.log(p)\n",
     "w0_class9 = first_term9 + second_term9 + math.log(p)\n",
     "\n",
-    "test_tp = 0\n",
-    "test_tn = 0\n",
-    "test_fp = 0\n",
-    "test_fn = 0\n",
+    "train_tp = 0\n",
+    "train_tn = 0\n",
+    "train_fp = 0\n",
+    "train_fn = 0\n",
     "\n",
-    "for i,x in enumerate(test_modified):\n",
+    "for i,x in enumerate(train_modified):\n",
     "    \n",
     "#   descriminant calculation\n",
     "    g_of_class6 = (((x)).dot(W_class6)).dot(x) + (w_class6.T).dot(x) + w0_class6\n",
@@ -1707,27 +1608,28 @@
     "        predicted_test = 6\n",
     "\n",
     "#   now finding confusion matrix\n",
-    "    if (predicted_test == test_array[i,columns]):\n",
+    "    if (predicted_test == train_array[i,columns]):\n",
     "        if predicted_test == 6:\n",
-    "            test_tp += 1\n",
+    "            train_tp += 1\n",
     "        else:\n",
-    "            test_tn += 1\n",
+    "            train_tn += 1\n",
     "    else:\n",
-    "        if (test_array[i,columns] == 6 and predicted_test == 9):\n",
-    "            test_fn += 1\n",
+    "        if (train_array[i,columns] == 6 and predicted_test == 9):\n",
+    "            train_fn += 1\n",
     "        else:\n",
-    "            test_fp += 1\n",
+    "            train_fp += 1\n",
     "    \n",
-    "print(\"\\nTesting TP : \" + str(test_tp))    \n",
-    "print(\"Testing TN : \" + str(test_tn)) \n",
-    "print(\"Testing FP : \" + str(test_fp))    \n",
-    "print(\"Testing FN : \" + str(test_fn))  \n",
+    "print(\"\\nTesting TP : \" + str(train_tp))    \n",
+    "print(\"Testing TN : \" + str(train_tn)) \n",
+    "print(\"Testing FP : \" + str(train_fp))    \n",
+    "print(\"Testing FN : \" + str(train_fn))  \n",
     "\n",
     "# now we have to find train and test errors\n",
     "\n",
-    "testing_error = (test_fp + test_fn)/(test_fp + test_fn + test_tp + test_tn)\n",
     "\n",
-    "print(\"Testing Error using confusion matrix: \", testing_error)\n"
+    "training_error = (train_fp + train_fn)/(train_fp + train_fn + train_tp + train_tn)\n",
+    "\n",
+    "print(\"\\nTraining Error using confusion matrix: \", training_error)\n"
    ]
   },
   {
@@ -1735,7 +1637,7 @@
    "id": "5f9193f7",
    "metadata": {},
    "source": [
-    "Answer: From question 2, we can see we got the testing error as 0.016666666666666666. For this question we used top 10 best features performers from testing data from question 1 and we get the error as 0.013888888888888888 which is less compared to 0.016666666666666666."
+    "Answer: From question 2, we can see we got the testing error as 0.016666666666666666. For this question we used top 10 best features performers from testing data from question 1 and we get the error as 0.0 which is negligible(very less) compared to 0.016666666666666666."
    ]
   }
  ],
