minor correction and uploading the final file

--- a/yd1530_HW2.ipynb
+++ b/yd1530_HW2.ipynb
@@ -1637,7 +1637,7 @@
    "id": "5f9193f7",
    "metadata": {},
    "source": [
-    "Answer: From question 2, we can see we got the testing error as 0.016666666666666666. For this question we used top 10 best features performers from testing data from question 1 and we get the error as 0.0 which is negligible(very less) compared to 0.016666666666666666."
+    "Answer: From question 2, we can see we got the testing error as 0.016666666666666666. For this question we used top 10 best features performers from training data from question 1 and we get the error as 0.0 which is negligible(very less) compared to 0.016666666666666666."
    ]
   }
  ],
